# dockfmt-py

./: .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
src/dockfmt_py/: __init__.py
